libs/@local/hashql/ast/tests/ui/lower/expander/import-resolver/generic-argument-absolute-path.jsonc
//@ run: fail
//@ description: Tests that generic arguments in non-final segments of paths are rejected with appropriate error
["::core::math<Integer>::add", { "#literal": 2 }, { "#literal": 3 }]
//~^ ERROR generic argument not allowed here
